Bug 1767893 resolve EnumerateRawDevices() promise if task is destroyed before run r=jib

Differential Revision: https://phabricator.services.mozilla.com/D175964